--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,34 @@
   </head>
   <body>
     示例
+    <div>
+      <div id="test">
+        <span>test1</span>
+        <p class="red">段落标签3</p>
+        test2
+      </div>
+      <div id="test2">
+        <p class="red">段落标签3</p>
+      </div>
+    </div>
+
+    <div id="empty">
+      <div id="e1"></div>
+      <div id="e2"></div>
+      <div id="e3"></div>
+    </div>
+
+    <div id="siblings">
+      <div id="s1"></div>
+      <div id="s2"></div>
+      <div id="s3"></div>
+    </div>
+    <div id="travel1">
+      <div id="t1">t1</div>
+      <div id="t2">t2</div>
+      <div id="t3">t3</div>
+    </div>
     <script src="dom.js"></script>
     <script src="main.js"></script>
-    <div id="test">test</div>
   </body>
 </html>
