--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DOM 1</title>
+    <style>
+      .red {
+        background: red;
+      }
+    </style>
   </head>
   <body>
     示例
@@ -30,7 +35,7 @@
       <div id="s2"></div>
       <div id="s3"></div>
     </div>
-    <div id="travel1">
+    <div id="travel">
       <div id="t1">t1</div>
       <div id="t2">t2</div>
       <div id="t3">t3</div>
